--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "d3": "^7.9.0",
+    "dot": "^1.1.3",
+    "dotenv": "^17.2.1",
+    "env": "^0.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
